# Truth-Terminal-MVP

./: .env  .gitignore  Cargo.toml  README.md
src/: index.html  main.rs
